--- a/public/styles/main2.css
+++ b/public/styles/main2.css
@@ -6,6 +6,21 @@ body{
     background-repeat: no-repeat;
     
 }
+#win_screen{
+    height: 40%;
+    width: 40%;
+    position: absolute;
+    margin-top: -43%;
+    margin-left: 20%;
+    display: none;
+    
+}
+#won{
+    height: 100%;
+    width: auto;
+
+}
+
 .button{
 
     border-radius: 50%;
@@ -162,7 +177,7 @@ to{ transform: rotate(360deg); }
         lawngreen 100%
     );
     position: absolute;
-    margin-top: 29%;
+    margin-top: 32%;
     margin-left: 100%;
 }
 
@@ -177,7 +192,7 @@ to{ transform: rotate(360deg); }
         lawngreen 100%
     );
     position: absolute;
-    margin-top: 20%;
+    margin-top: 23%;
     margin-left: 100%;
 }
 
@@ -186,7 +201,7 @@ to{ transform: rotate(360deg); }
     width: 10%;
     background: linear-gradient(rgb(147, 165, 42),rgba(165, 112, 42, 0.767));
     position: absolute;
-    margin-top: 10%;
+    margin-top: 13%;
     margin-left: 50%;
 }
 
@@ -201,7 +216,7 @@ to{ transform: rotate(360deg); }
         lawngreen 100%
     ) ;
     position: absolute;
-    margin-top: 10%;
+    margin-top: 13%;
     margin-left: 100%;
 }
 #bigBlock2{
@@ -215,7 +230,7 @@ to{ transform: rotate(360deg); }
         lawngreen 100%
     ) ;
     position: absolute;
-    margin-top: 10%;
+    margin-top: 13%;
     margin-left: 122%;
 }
 .star{
