formatted the code

--- a/public/styles/level1.css
+++ b/public/styles/level1.css
@@ -1,248 +1,247 @@
-body{
+body {
     height: 8vh;
     width: 100vw;
     justify-content: baseline;
     background-image: url("../assets/back.jpg");
     background-repeat: no-repeat;
-    
+
 }
-#win_screen{
+
+#win_screen {
     height: 40%;
     width: 40%;
     position: absolute;
     margin-top: -43%;
     margin-left: 20%;
     display: none;
-    
+
 }
-#won{
+
+#won {
     height: 100%;
     width: auto;
 
 }
 
-.button{
+.button {
 
     border-radius: 50%;
     border-width: 1px;
 
 }
+
 button:hover {
     transition: transform 150ms;
     transform: translateY(-10px);
 }
-#ball{
-    position:relative;
+
+#ball {
+    position: relative;
     margin-left: 50rem;
     border-radius: 50%;
     animation: 1s 1s ball-jump infinite ease-in-out;
 }
-#score{
+
+#score {
     position: absolute;
     margin-left: 70%;
     margin-top: 5%;
-     /* padding-top:     5%; */
 }
- 
-#canvas1{
+
+#canvas1 {
     height: 1000%;
     width: 65%;
     position: relative;
     margin-left: 6vw;
     display: flex;
     flex-direction: column;
-    /* margin-top: 1.5vh; */
-    /* background-color: rgb(71, 165, 42); */
     border: 2px solid black;
 }
-#sky{
+
+#sky {
     overflow: hidden;
     height: 75%;
     position: relative;
-    /* display: flex; */
-    
-    background: linear-gradient(rgb(0, 102, 255) , rgb(0, 183, 255));
-    
+    background: linear-gradient(rgb(0, 102, 255), rgb(0, 183, 255));
+
 }
-#soil{
+
+#soil {
     background: saddlebrown;
     height: 20%;
 }
-#grass{
+
+#grass {
     overflow: hidden;
-    /* position: relative; */
     height: 5%;
     background: lawngreen;
     display: flex;
     flex-direction: row;
 }
 
-#thorns{
-    /* position: absolute; */
+#thorns {
     margin-left: 100%;
     height: 100%;
     width: auto;
-    /* display: none; */
 }
-#thorn2{
-    /* position: absolute; */
+
+#thorn2 {
     margin-left: 100%;
-    /* margin-top: -100%; */
     height: inherit;
     width: auto;
     display: none;
 }
-#thorn3{
-    /* position: absolute; */
+
+#thorn3 {
     margin-left: 110%;
-    /* margin-top: -100%; */
     height: inherit;
     width: auto;
     display: none;
 }
-#dagger{
+
+#dagger {
 
     position: absolute;
     margin-left: 200%;
     height: 20%;
     margin-top: -11%;
     width: auto;
-    border-radius: 50%  ;
-    /* display: none; */
+    border-radius: 50%;
 
     animation-name: rotate;
     animation-duration: 6s;
     animation-iteration-count: infinite;
-    animation-timing-function:ease-in-out;
-} 
-
-@keyframes rotate{
-from{ transform: rotate(-360deg); }
-to{ transform: rotate(360deg); }
+    animation-timing-function: ease-in-out;
 }
-#forward{
+
+@keyframes rotate {
+    from {
+        transform: rotate(-360deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+#forward {
     position: relative;
     margin-left: 10rem;
     display: none;
 
 }
-#backward{
+
+#backward {
     position: relative;
     margin-left: 1rem;
     display: none;
 
 }
-#jump{
+
+#jump {
     position: relative;
     margin-top: 2%;
     margin-left: 20%;
     display: none;
 }
-#game_name{
+
+#game_name {
     position: relative;
     margin-left: 5%;
     font-size: 400%;
 }
-#buttons
-{   
+
+#buttons {
     display: flex;
     flex-direction: row;
     position: relative;
     margin-top: 0.5%;
-    height : 180%;
+    height: 180%;
     width: 100%;
-    /* margin-top:  */
-    /* background-color: green; */
 }
-#boundry{
+
+#boundry {
     display: flex;
 
     flex-direction: column-reverse;
-    height:100%;
+    height: 100%;
     width: 100%;
     left: 0;
     right: 0;
     margin: auto;
-    
+
 }
 
-#lowLand{
+#lowLand {
     height: 5%;
     width: 10%;
-    background: linear-gradient(
-        to top,
-        brown 0%,
-        brown 50%,
-        lawngreen 50%,
-        lawngreen 100%
-    );
+    background: linear-gradient(to top,
+            brown 0%,
+            brown 50%,
+            lawngreen 50%,
+            lawngreen 100%);
     position: absolute;
     margin-top: 32%;
     margin-left: 100%;
 }
 
-#highLand{
+#highLand {
     height: 5%;
     width: 10%;
-    background: linear-gradient(
-        to top,
-        brown 0%,
-        brown 50%,
-        lawngreen 50%,
-        lawngreen 100%
-    );
+    background: linear-gradient(to top,
+            brown 0%,
+            brown 50%,
+            lawngreen 50%,
+            lawngreen 100%);
     position: absolute;
     margin-top: 23%;
     margin-left: 100%;
 }
 
-#platform{
+#platform {
     height: 8%;
     width: 10%;
-    background: linear-gradient(rgb(147, 165, 42),rgba(165, 112, 42, 0.767));
+    background: linear-gradient(rgb(147, 165, 42), rgba(165, 112, 42, 0.767));
     position: absolute;
     margin-top: 13%;
     margin-left: 50%;
 }
 
-#bigBlock{
+#bigBlock {
     height: 80%;
-    width :15%;
-    background:linear-gradient(
-        to top,
-        brown 0%,
-        brown 80%,
-        lawngreen 80%,
-        lawngreen 100%
-    ) ;
+    width: 15%;
+    background: linear-gradient(to top,
+            brown 0%,
+            brown 80%,
+            lawngreen 80%,
+            lawngreen 100%);
     position: absolute;
     margin-top: 13%;
     margin-left: 100%;
 }
-#bigBlock2{
+
+#bigBlock2 {
     height: 80%;
-    width :15%;
-    background:linear-gradient(
-        to top,
-        brown 0%,
-        brown 80%,
-        lawngreen 80%,
-        lawngreen 100%
-    ) ;
+    width: 15%;
+    background: linear-gradient(to top,
+            brown 0%,
+            brown 80%,
+            lawngreen 80%,
+            lawngreen 100%);
     position: absolute;
     margin-top: 13%;
     margin-left: 122%;
 }
-.star{
+
+.star {
     display: flex;
     flex-direction: row;
-    /* align-items: center; */
 
     justify-content: space-evenly;
 
 }
-#star1{
-    /* align-self: center; */
+
+#star1 {
     margin-top: -5%;
     margin-left: -70%;
     height: 10%;
@@ -251,8 +250,7 @@ to{ transform: rotate(360deg); }
     display: none;
 }
 
-#star2{
-    /* align-self: center; */
+#star2 {
     margin-top: -5%;
     margin-left: -90%;
     height: 10%;
@@ -260,8 +258,8 @@ to{ transform: rotate(360deg); }
     position: absolute;
     display: none;
 }
-#star3{
-    /* align-self: center; */
+
+#star3 {
     margin-top: -5%;
     margin-left: -80%;
     height: 10%;
@@ -270,21 +268,41 @@ to{ transform: rotate(360deg); }
     display: none;
 }
 
-.starAnimate{
+.starAnimate {
     animation-name: starPath;
     animation-duration: 3s;
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
 }
-@keyframes starPath{
-    0%  {height: 0%;}
-    20% {height: 20%;}
-    50% {transform: translateY(-100%); border-radius: 50%;}
-    95% {height: 80%;}
-    100%{height: 100%;}
-    100%{ display: none; }
+
+@keyframes starPath {
+    0% {
+        height: 0%;
+    }
+
+    20% {
+        height: 20%;
+    }
+
+    50% {
+        transform: translateY(-100%);
+        border-radius: 50%;
+    }
+
+    95% {
+        height: 80%;
+    }
+
+    100% {
+        height: 100%;
+    }
+
+    100% {
+        display: none;
+    }
 }
-#gameBall{
+
+#gameBall {
     position: relative;
     align-self: center;
     border-radius: 50%;
@@ -292,48 +310,59 @@ to{ transform: rotate(360deg); }
     width: auto;
 }
 
-.frontanimation{
+.frontanimation {
 
     animation-name: frotate;
     animation-duration: 6s;
     animation-iteration-count: infinite;
-    animation-timing-function:linear;
-    
-} 
+    animation-timing-function: linear;
 
-@keyframes frotate{
-    from{ transform: rotate(-360deg); transform: translateX(0,0) ;}
-    to{ transform: rotate(360deg); transform: translateX(0,40px) ; }
 }
 
-.backanimation{
+@keyframes frotate {
+    from {
+        transform: rotate(-360deg);
+        transform: translateX(0, 0);
+    }
+
+    to {
+        transform: rotate(360deg);
+        transform: translateX(0, 40px);
+    }
+}
+
+.backanimation {
 
     animation-name: brotate;
     animation-duration: 6s;
     animation-iteration-count: infinite;
-    animation-timing-function:linear;
-} 
-
-@keyframes brotate{
-    from{ transform: rotate(360deg); }
-    to{ transform: rotate(-360deg); }
+    animation-timing-function: linear;
 }
 
-.jumpanimation{
+@keyframes brotate {
+    from {
+        transform: rotate(360deg);
+    }
+
+    to {
+        transform: rotate(-360deg);
+    }
+}
+
+.jumpanimation {
     animation: 1s 0s ball-jumpLow ease-in-out;
 }
 
-@keyframes ball-jumpLow{
-    /* 0%  {height: 0%;}
-    20% {height: 20%;} */
-    50% {transform: translateY(-100%); border-radius: 50%;}
-    /* 95% {height: 20%;}
-    100%{height: 0%;} */
+@keyframes ball-jumpLow {
+    50% {
+        transform: translateY(-100%);
+        border-radius: 50%;
+    }
 }
-@keyframes ball-jump{
-    /* 0%  {height: 120px;}
-    20% {height: 200px;} */
-    50% {transform: translateY(-100%); border-radius: 50%;}
-    /* 95% {height: 200px;}
-    100%{height: 120px;} */
+
+@keyframes ball-jump {
+    50% {
+        transform: translateY(-100%);
+        border-radius: 50%;
+    }
 }
